<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lab2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.lab2.ui.matches.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.lab2.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.lab2.ui.accounts.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"
        />
</navigation>